# kdv-solitons

./: .dockerignore  .gitignore  Dockerfile  README.md  analyze_kdv.py  debug_detailed.py  debug_solver.py  pyproject.toml  requirements.txt  simple_web_app.py  test_minimal.py  test_solver_better.py  test_solver_direct.py  test_web_solver.py  web_app.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
specs/constitution/: architecture.md  code-standards.md  mission.md  roadmap.md  tech-stack.md  validation-contract.md
specs/theory/: kdv-theory.tex
src/kdv_solver/: solver.py
templates/: index.html
tests/: conftest.py  test_app.py
tests/features/: test_soliton_validation.py
tests/unit/: __init__.py  test_solver.py
