[project]
name = "kdv-solver"
version = "0.1.0"
description = "Pseudo-spectral solver for the Korteweg-de Vries equation"
authors = [{ name = "Mehdi Jenab", email = "mehdi.jenab@otilumionics.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "flask>=3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ruff
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# Tests use physics notation (N grid points, L domain length) as local names.
"tests/**" = ["N806"]

# Mypy
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"

# Coverage
[tool.coverage.run]
source = ["src/kdv_solver"]

[tool.coverage.report]
fail_under = 100
show_missing = true
